horizontal scroll bar created for company categories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
 
         <activity android:name=".CreateNewAccount"
                   android:exported="true"/>
+
+        <activity android:name=".LandingPage"
+                  android:exported="true"/>
     </application>
 
 </manifest>
