--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
 
         <activity android:name=".CreateNewAccount"
                   android:exported="true"/>
+        <activity android:name=".Forget_password"
+            android:exported="true"/>
     </application>
 
 </manifest>
