--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
                   android:exported="true"/>
         <activity android:name=".Forget_password"
             android:exported="true"/>
+        <activity android:name=".LandingPage"
+                  android:exported="true"/>
     </application>
 
 </manifest>
