--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,15 @@
 
         <activity android:name=".CreateNewAccount"
             android:exported="true"/>
+
         <activity android:name=".Forget_password"
         android:exported="true"/>
+
         <activity android:name=".LandingPage"
         android:exported="true"/>
+
+        <activity android:name=".MobilityCompanies"
+                  android:exported="true"/>
     </application>
 
 </manifest>
