--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
 
         <activity android:name=".CloudCompanies"
                   android:exported="true"/>
+
+        <activity android:name=".CollaborationCompanies"
+                  android:exported="true"/>
     </application>
 
 </manifest>
