advertisement, payments, trading companies features implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,15 @@
 
         <activity android:name=".CommunicationCompanies"
                   android:exported="true"/>
+
+        <activity android:name=".AdvertisementCompanies"
+                  android:exported="true"/>
+
+        <activity android:name=".PaymentCompanies"
+                  android:exported="true"/>
+
+        <activity android:name=".TradingCompanies"
+                  android:exported="true"/>
     </application>
 
 </manifest>
