investment, gaming, entertainment companies features implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,15 @@
 
         <activity android:name=".TradingCompanies"
                   android:exported="true"/>
+
+        <activity android:name=".InvestmentCompanies"
+                  android:exported="true"/>
+
+        <activity android:name=".GamingCompanies"
+                  android:exported="true"/>
+
+        <activity android:name=".EntertainmentCompanies"
+                  android:exported="true"/>
     </application>
 
 </manifest>
