DBMS and SQL resources features implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,14 @@
         <activity
             android:name=".PythonProgramming"
             android:exported="true" />
+
+        <activity
+            android:name=".DBMSResources"
+            android:exported="true" />
+
+        <activity
+            android:name=".SQLResources"
+            android:exported="true" />
     </application>
 
 </manifest>
