--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,9 @@
         <activity
             android:name=".PythonProgramming"
             android:exported="true" />
+        <activity
+            android:name=".Roadmaps"
+            android:exported="true" />
     </application>
 
 </manifest>
