array sde sheet questions and code feature implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,6 +159,10 @@
         <activity
             android:name=".MongoDB"
             android:exported="true" />
+
+        <activity
+            android:name=".Array"
+            android:exported="true" />
         
     </application>
 
