Dynamic programming feature implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,6 +176,10 @@
         <activity
             android:name=".BitManipulation"
             android:exported="true" />
+
+        <activity
+            android:name=".DynamicProgramming"
+            android:exported="true" />
     </application>
 
 </manifest>
