LinkedList feature implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -188,6 +188,10 @@
         <activity
             android:name=".Greedy"
             android:exported="true" />
+
+        <activity
+            android:name=".LinkedList"
+            android:exported="true" />
     </application>
 
 </manifest>
