--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -194,6 +194,9 @@
         <activity
             android:name=".LinkedList"
             android:exported="true" />
+
+        <activity android:name=".Backtracking"
+            android:exported="true"/>
     </application>
 
 </manifest>
