stacks and queues feature implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -197,6 +197,9 @@
 
         <activity android:name=".Backtracking"
             android:exported="true"/>
+
+        <activity android:name=".StacksAndQueues"
+            android:exported="true"/>
     </application>
 
 </manifest>
