--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:foreground="@drawable/roundedimage"
         android:fullBackupContent="@xml/backup_rules"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher"
         android:label="Codeprep"
-        android:foreground="@drawable/roundedimage"
         android:supportsRtl="true"
         android:theme="@style/Theme.MajorProject"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+
+        <activity
+            android:name=".VideoPlayerActivity"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ForgetPassword"
-            android:exported="false">
+            android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".Register"
-            android:exported="false">
+            android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".Login"
-            android:exported="false">
+            android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -41,7 +50,7 @@
         <activity
             android:name=".SplashActivity"
             android:exported="true"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:theme="@style/Theme.Design.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -174,32 +183,27 @@
         <activity
             android:name=".Array"
             android:exported="true" />
-
         <activity
             android:name=".BitManipulation"
             android:exported="true" />
-
         <activity
             android:name=".DynamicProgramming"
             android:exported="true" />
-
         <activity
             android:name=".Graphs"
             android:exported="true" />
-
         <activity
             android:name=".Greedy"
             android:exported="true" />
-
         <activity
             android:name=".LinkedList"
             android:exported="true" />
-
-        <activity android:name=".Backtracking"
-            android:exported="true"/>
-
-        <activity android:name=".StacksAndQueues"
-            android:exported="true"/>
+        <activity
+            android:name=".Backtracking"
+            android:exported="true" />
+        <activity
+            android:name=".StacksAndQueues"
+            android:exported="true" />
     </application>
 
 </manifest>
