--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        google()
         mavenCentral()
     }
 
@@ -9,6 +10,7 @@ buildscript {
 
         classpath 'com.android.tools.build:gradle:4.3.3'
         classpath 'com.google.gms:google-services:4.3.15'
+
 
 
 
