Ola, Uber features implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -210,6 +210,9 @@
 
         <activity android:name=".Trees"
             android:exported="true"/>
+
+        <activity android:name=".CompanySpecificGeneralLayout"
+            android:exported="true"/>
     </application>
 
 </manifest>
