--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.1')
     implementation 'com.firebase:firebase-client-android:2.5.2'
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.itextpdf:itextpdf:5.5.13.2'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
+
 
 
 
